<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 Kiall Mac Innes <kiall@macinnes.ie>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may
  ~ not use this file except in compliance with the License. You may obtain
  ~ a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  ~ WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  ~ License for the specific language governing permissions and limitations
  ~ under the License.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="TVHeadend Settings">

    <PreferenceCategory android:title="Audio and Video">
        <ListPreference
            android:key="buffer_playback_ms"
            android:title="Buffer Duration"
            android:dialogTitle="Buffer Seconds"
            android:entries="@array/buffer_playback_ms_names"
            android:entryValues="@array/buffer_playback_ms_values"
            android:defaultValue="@string/pref_default_buffer_playback_ms"
            android:summary="How many seconds to buffer before starting playback"/>

        <CheckBoxPreference
            android:key="audio_passthrough_decodeder_enabled"
            android:title="Enable Audio Passthrough"
            android:defaultValue="@bool/pref_default_audio_passthrough_decodeder_enabled"
            android:summary="You must also ensure the system audio settings allows passthrough"/>

        <CheckBoxPreference
            android:key="ffmpeg_audio_enabled"
            android:title="Enable FFMpeg Audio Codecs"
            android:defaultValue="@bool/pref_default_audio_ffmpeg_audio_enabled"/>

        <CheckBoxPreference
            android:key="captions_apply_embedded_styles"
            android:title="Apply embedded caption styles"
            android:defaultValue="@bool/pref_default_captions_apply_embedded_styles"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="EPG">
        <CheckBoxPreference
            android:key="epg_sync_enabled"
            android:title="Enable EPG Sync"
            android:defaultValue="@bool/pref_default_epg_sync_enabled" />
        <ListPreference
            android:key="epg_max_time"
            android:title="EPG Sync Duration"
            android:dialogTitle="EPG Sync Duration"
            android:entries="@array/epg_max_time_names"
            android:entryValues="@array/epg_max_time_values"
            android:defaultValue="@string/pref_default_epg_max_time"
            android:summary="Amount of EPG data to sync"/>
        <CheckBoxPreference
            android:key="epg_last_update_enabled"
            android:title="Enable Last Update Time Optimization"
            android:summary="Disable if you see gaps in EPG data"
            android:defaultValue="@bool/pref_default_epg_last_update_enabled" />
        <CheckBoxPreference
            android:key="epg_default_poster_art_enabled"
            android:title="Enable EPG Default Poster Art"
            android:summary="Enable if EPG data provider does not include poster art"
            android:defaultValue="@bool/pref_default_epg_default_poster_art_enabled" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Advanced Settings">
        <CheckBoxPreference
            android:key="shield_workaround_enabled"
            android:title="Enable nVidia Shield Workaround"
            android:defaultValue="@bool/pref_default_shield_workaround_enabled" />

        <CheckBoxPreference
            android:key="debug_text_view_enabled"
            android:title="Enable Debug Text View"
            android:defaultValue="@bool/pref_default_debug_text_view_enabled" />

        <CheckBoxPreference
            android:key="timeshift_enabled"
            android:title="Enable timeshift support"
            android:summary="DO NOT ENABLE THIS"
            android:defaultValue="@bool/pref_default_timeshift_enabled"/>

        <CheckBoxPreference
            android:key="dvr_enabled"
            android:title="Enable DVR support"
            android:summary="DO NOT ENABLE THIS"
            android:defaultValue="@bool/pref_default_dvr_enabled"/>

        <!-- TODO: This needs to be made into a list, based on fetching the list of available profiles -->
        <EditTextPreference
            android:key="htsp_stream_profile"
            android:title="HTSP Stream Profile"
            android:summary="Stream profile to use for HTSP video"
            android:defaultValue="@string/pref_default_htsp_stream_profile" />

        <PreferenceScreen android:title="Crash Reporting Settings" android:key="crash_reporting_settings" android:persistent="false">
            <CheckBoxPreference android:key="acra.enable"
                                android:title="@string/pref_disable_acra"
                                android:summaryOn="@string/pref_acra_enabled"
                                android:summaryOff="@string/pref_acra_disabled"
                                android:defaultValue="true"/>
            <CheckBoxPreference android:key="acra.syslog.enable"
                                android:summaryOn="@string/pref_acra_syslog_enabled"
                                android:summaryOff="@string/pref_acra_syslog_disabled"
                                android:title="@string/pref_acra_syslog"
                                android:defaultValue="true"/>
            <EditTextPreference android:key="acra.user.email"
                                android:title="@string/pref_acra_user_email"
                                android:summary="@string/pref_acra_user_email_summary"/>

        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>